--- a/src/Style/ProductDetails.css
+++ b/src/Style/ProductDetails.css
@@ -213,3 +213,37 @@
     margin: 10px 15px; /* Space around the product name */
     text-align: left; /* Left-aligned product name */
 }
+
+
+.quantity-container {
+    display: flex;
+    align-items: center;
+    margin: 15px 0px;
+
+  }
+  
+  .quantity-btn {
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    padding: 5px 10px;
+    color:#ffd700;
+    background-color: #01012C;
+    font-size: larger;
+    cursor: pointer;
+  }
+  
+  .quantity-btn:hover {
+    background-color: #ffd700;
+    color:#01012C
+  }
+  
+  .quantity-input {
+    width: 50px;
+    text-align: center;
+    margin: 0 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    padding: 5px;
+    background-color: #f9f9f9;
+  }
+  
